--- a/APIContributionStyleGuide.mediawiki
+++ b/APIContributionStyleGuide.mediawiki
@@ -9,12 +9,7 @@
 
 This guide provides the instructions needed to add your own content to the Code Examples or Remarks sections of the Function, Enumeration, and Structure pages in this wiki.
 
-{X} ~+Existing content, including markup, should not be modified or removed unless specifically noted.+~
-
-If you would like to contribute to or edit other sections <<Color2(green,or make more complex contributions)>>, more detailed instructions can be found at [[APIDocumentationStyleGuide]].  
-
-/!\ <<Color2(green, You must have permission to make major edits or create new pages.)>> <br/>
-<<Color2(green,Please email docs@libsdl.org to request permission.)>>
+{X} '''You must have permission to make other contributions, edit existing content, or create new pages.  Please email docs@libsdl.org to request permission.'''
 
 
 == The Basics ==
@@ -51,6 +46,8 @@ When you have completed adding your content and are satisfied with the formattin
  (!) Don't use the "preview", "spell check", "save changes" or "cancel" buttons on that page before "load draft" or you will overwrite your old draft with a new one.
 
  If you successfully save a page, the internal draft copy of it is not needed any more and will be deleted. 
+----
+/!\ ~+<<Color2(red,Existing content,)>> <<Color2(red,including markup,)>> <<Color2(red,should not be modified or removed.)>>+~
 ----
 == The Specifics ==
 
