--- a/Roadmap.mediawiki
+++ b/Roadmap.mediawiki
@@ -2,6 +2,7 @@
 
 This is a list of features which are in progress for the SDL 1.3 release.  The features are organized by subsystem and assigned to developers.  Features will be added, removed, and moved between Complete, Required, and Wishlist as the design evolves.
 
+<<TableOfContents(2, 2)>>
 
 == Video ==
 
@@ -21,7 +22,7 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 * <<Color2(green, Mac OS X)>>
 * Linux
 * ???: Add OpenGL 3.0 context support
-* Sam: Create API for clipboard support (check out PyGame)
+* Sam: Create API for clipboard support (check out !PyGame)
 * Sam: Create flags for specifying foreign window event behavior
 
 === Wishlist ===
@@ -121,7 +122,7 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 === Required ===
 * ???: Create multi-touch input API
 
-== Multi-threading / CPU info ==
+== Multi-threading ==
 
 === Complete ===
 * <<Color2(green, Sam: Create API for getting the number of CPUs)>>
