--- a/Roadmap.mediawiki
+++ b/Roadmap.mediawiki
@@ -48,20 +48,20 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 == Audio ==
 
 === Complete ===
-* <<Color2(green, Ryan: Add support for multiple audio devices)>>
-* <<Color2(green, Windows)>>
-* <<Color2(green, Mac OS X)>>
-* <<Color2(green, Linux)>>
-* <<Color2(green, Ryan: Create audio recording API)>>
-* <<Color2(green, Windows)>>
-* <<Color2(green, Mac OS X)>>
-* <<Color2(green, Linux)>>
 * <<Color2(green, Ryan: Add support for float and 32-bit int audio formats)>>
 * <<Color2(green, Ryan: Add support for 7.1 speaker output)>>
 
 === Required ===
-* Ryan: Add support for non-power-of-two audio rate conversion
+* <<Color2(green, Ryan: Create audio recording API)>>
+* Windows
+* Mac OS X
+* Linux
+* <<Color2(green, Ryan: Add support for multiple audio devices)>>
+* Windows
+* Mac OS X
+* Linux
 * Ryan: Add support for audio device live connect and disconnect
+* Ryan: Add support for non-power-of-two audio rate conversion
 
 === Wishlist ===
 * PCM volume control
