--- a/Roadmap.mediawiki
+++ b/Roadmap.mediawiki
@@ -147,6 +147,7 @@ This is a list of features which are in progress for the SDL 1.3 release.  The f
 * Sam: Public license for SDL_compat.c, tests, and SDL_main*
 * Sam: Create extended set of (negative) error codes and have the API functions document and return them
 * Sam: Figure out the best way to support simultaneous SDL 1.2 and SDL 1.3 installations
+* Sam: Write introductions for SDL 1.3 API documentation
 
 === Wishlist ===
 * ???: Create an API for live video capture
