--- a/APIContributionStyleGuide.mediawiki
+++ b/APIContributionStyleGuide.mediawiki
@@ -10,11 +10,11 @@
 This guide provides instructions for adding your own content to the Code Examples or Remarks sections of the API pages in this wiki.
 
 
-```#!wiki note
+== Before You Start ==
+
 Anyone may contribute Code Examples or Remarks.  
 
 If you would like to make other contributions, edit existing content, or create new pages, please email docs@libsdl.org to coordinate efforts.
-```
 
 == The Basics ==
 
