--- a/SDL_RenderClear.mediawiki
+++ b/SDL_RenderClear.mediawiki
@@ -16,7 +16,41 @@ Returns 0 on success or a negative error code on failure; call [[SDL_GetError]](
 
 == Code Examples ==
 ```c++
-You can add your code example here
+#include <SDL/SDL.h>
+
+int main(int argc, char** argv)
+{
+	// Initialize SDL.
+	if (SDL_Init(SDL_INIT_VIDEO) < 0)
+		return 1;
+	
+	// Create the window were we will draw.
+	SDL_WindowID window = 
+		SDL_CreateWindow("SDL_RenderClear",
+		SDL_WINDOWPOS_CENTERED, SDL_WINDOWPOS_CENTERED,
+		512, 512,
+		SDL_WINDOW_SHOWN);
+	
+	// We must call SDL_CreateRenderer in order for draw calls to affect this window.
+	SDL_CreateRenderer(window, -1, 0);
+	
+	// Select the color for drawing. It is set to red here.
+	SDL_SetRenderDrawColor(255, 0, 0, 0);
+	
+	// Clear the entire screen to our selected color.
+	SDL_RenderClear();
+	
+	// Up until now everything was drawn behind the scenes.
+	// This will show the new, red contents of the window.
+	SDL_RenderPresent();
+	
+	// Give us time to see the window.
+	SDL_Delay(5000);
+	
+	// Always be sure to clean up
+	SDL_Quit();
+	return 0;
+}
 ```
 
 == Remarks ==
